...
  onVariantTypeSelect,
  expanded,
  setExpanded,
}: SetVariantSelectorProps) {
  return (
    <EntitySelector
      title="Variant Types"
      query={api.selectorOptions.getSelectorOptions}
      queryArgs={{ level: "variantType", parentId: setId }}
      selectedId={selectedVariantTypeId as string | null}
      onSelect={(id) => onVariantTypeSelect(id as GenericId<"selectorOptions">)}
      expanded={expanded}
      setExpanded={setExpanded}
...
